more mobile tweaks on bottom overlay

--- a/days/day-2-5/styles.css
+++ b/days/day-2-5/styles.css
@@ -37,15 +37,16 @@ h1 {
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
+    z-index:0;
   }
 
   .content {
-    position: fixed;
-    bottom: 0;
     background: rgba(0, 0, 0, 0.6);
     color: #f1f1f1;
     width: 100%;
     padding: 20px;
+    position: relative;
+    z-index: 10;
   }
   .quote {
     background:white;
@@ -95,6 +96,9 @@ h1 {
       padding: 25px;
     }
 
-
+    .content {
+      position: fixed;
+      bottom: 0;
+    }
   }
 
